--- a/ts-app/src/App.css
+++ b/ts-app/src/App.css
@@ -1,27 +1,271 @@
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.body {
+margin-left: 230px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  background-color: #d84315;
+  padding: 6px;
+  margin: 0px;
+  font-weight: 600;
+  color: black;
+}
+.msg {
+  margin-left: 230px;
+}
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  background-color: #ffab91;
+  height: 100%;
+  width: 200px;
+  position:absolute;
+  font-weight: 700;
+  overflow: auto;
+}
+.active {
+  background-color: #fa9576;
 }
 
-.App-link {
-  color: #61dafb;
+li a {
+  display: block;
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-align: center;
+}
+.searchdiv{
+  padding-top: 15px;
+}
+.label{
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: 600;
+}
+.inputName{
+  margin-left: 10px;
+  padding: 4px;
+  width: 130px;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+.select{
+  margin-left: 10px;
+  margin-bottom: 10px;
+  padding: 4px;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+  width: 130px;
+}
+p {
+  margin-top: 15px;
+  margin-left: 240px;
+  font-weight: 500;
+  color: #000000;
+}
+.inputForm {
+  margin-bottom: 10px;
+  width: 200px;
+}
+.addForm {
+  margin-left: 230px;
+  width: 200px;
+}
+.selectForm{
+  margin-left: 5px;
+  margin-bottom: 10px;
+  padding: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 2px solid black;
+  width: 210px;
+}
+.btnSearch{
+  margin-left: 10px;
+  background-color: #ffddc1;
+  border: 2px solid #ffddc1;
+  color:black;
+  padding: 4px;
+  width: 70px;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.btnSearch:hover {
+  background-color: rgb(253, 252, 252);
+  border: 2px solid #ffddc1;
+  color:black; ;
+  font-weight: 500;
+}
+.btnClear{
+  margin-left: 10px;
+  background-color: #c63f17;
+  border: 2px solid #c63f17;
+  color:white;
+  padding: 4px;
+  width: 70px;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.btnClear:hover {
+  background-color: rgb(253, 252, 252);
+  border: 2px solid #c63f17;
+  color:#c63f17;
+  font-weight: 500;
+}
+.btnAddUser{
+  margin-left: 10px;
+  margin-top: 5px;
+  background-color: #ffddc1;
+  border: 2px solid #ffddc1;
+  color:#000000; ;
+  padding: 4px;
+  width: 70px;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.btnAddUser:hover {
+  background-color: #ffddc1;
+  color:white;
+  font-weight: 500;
+}
+table {
+  margin-top: 20px;
+  margin-left: 20px;
+  border-collapse: collapse;
+  
+}
+table, th, td {
+  border:1px solid rgb(255, 255, 255);
+  padding: 8px;
+}
+th {
+  background-color: #c8e6c9;
+  color: black;
+  font-weight: 400;
+  font-size: 17px;
+}
+tr {
+  background-color: rgb(255, 255, 255);
+  border-bottom: 2px solid #c8e6c9;
+  font-size: 16px;
+}
+.btnDelete{
+  margin-left: 10px;
+  background-color: #c63f17; 
+  border: 2px solid #c63f17;
+  color:white;
+  padding: 5px;
+  width: 50px;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.btnDelete:hover {
+  background-color: white;
+  color:#c63f17;
+  font-weight: 500;
+}
+.btnEdit{
+  margin-left: 10px;
+  background-color: #a2bb9a;
+  border: 2px solid #a2bb9a;
+  color:white;
+  padding: 5px;
+  width: 50px;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.btnEdit:hover {
+  background-color: white;
+  color:#a2bb9a;
+  font-weight: 500;
+}
+.labelForm {
+  font-size: 15px;
+  display: inline-block;
+  margin: 5px;
+}
+.inputForm {
+  margin-left: 5px;
+  padding: 4px;
+  font-size: medium;
+  border-radius: 5px;
+}
+.buttons {
+  margin-left: 50px;
+  margin-top: 5px;
+}
+.btnSave {
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: #a2bb9a;
+  border: 2px solid #a2bb9a;
+  color:white;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnSave:disabled{
+  background-color: #b6b6b6;
+  color:white;
+  border: 2px solid #b6b6b6;
+  font-weight: 500;
 }
+.btnSaveAdd:disabled{
+  background-color: #b6b6b6;
+  color:white;
+  border: 2px solid #b6b6b6;
+  font-weight: 500;
+}
+.btnSaveAdd {
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: #a2bb9a;
+  border: 2px solid #a2bb9a;
+  color:white;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.btnBack{
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: #c65032;
+  border: 2px solid #c65032;
+  color:white;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.loading {
+  width: 30px;
+  height: 30px;
+  margin: 20px auto;
+  border-radius: 100%;
+  border-right: 5px solid rgb(85, 73, 163);
+  border-left: 5px solid #f1f1f1;
+  border-bottom: 5px solid #f1f1f1;
+  border-top: 5px solid #f1f1f1;
+  animation-name: rotation;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
